# Hatsik

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
.kiro/steering/: product.md  structure.md  tech.md
apps/accounts/: admin.py  emails.py  forms.py  managers.py  middleware.py  models.py  urls.py  validators.py  views.py
apps/events/: admin.py  decorators.py  forms.py  models.py  services.py  urls.py  views.py
apps/internal/: apps.py  dev_views.py  urls.py  views.py
apps/items/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/moderation/: admin.py  forms.py  models.py  services.py  urls.py  views.py
config/: urls.py  views.py  wsgi.py
config/settings/: base.py  local.py  production.py
docs/: ARCHITECTURE_AND_STACK.md  DATABASE_SCHEMA.md  MODULES_SPEC.md  PRODUCT_OVERVIEW.md  ROADMAP.md  UI_UX_SPEC.md  USER_STORIES.md  hatsik-brand-identity.md
docs/html/: deployment-guide.html  phase-1-report.html  phase-2-report.html  phase-2-testing.html  phase-3-report.html  phase-3-testing.html  phase-4-report.html  phase-6-report.html  phase-6-testing.html  project-status-report.html
docs/stitch-html/: anadir-item.html  create-event.html  dashboard.html  editar-item.html  event-detail.html  ficha-evento.html  gestion-solicitudes.html  (+7 more)
lessons/: kiro-course-plan(codex).md  kiro-course-plan.md
requirements/: base.txt  local.txt
scripts/: capture_screenshots.js  capture_share.js
templates/: auth-base.html  base.html  landing.html
(+105 files in other folders)
