[project]
name = "hatsik"
version = "0.1.0"
description = "Hatsik — Collaborative event item management platform"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "DJ001", # null on string fields — required by DATABASE_SCHEMA.md design decision
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
